<resources>
    <string name="app_name">InventarSoft</string>

    <!-- Editor -->
    <string name="nume_editor">Introduceti Numele Produsului</string>
    <string name="COD_editor">Introduceti Codul Produsului</string>
    <string name="Save_editor">Salveaza</string>
    <string name="generate_bar_code">generate_code</string>
    <string name="print_bar_code">Imprimati</string>
    <string name="scan_string">Scaneaza</string>
    <string name="new_item">Introducere Produs Nou</string>
    <string name="edit_item">Editare Produs</string>
    <string name="missing_data">Lipsesc datele produsului, nu se poate salva! </string>
    <string name="insertion_failed">Salvarea produsului a esuat </string>
    <string name="insertion_succeded">Salvarea produsului a fost realizata cu succes!</string>
    <string name="update_failed">Editarea datealor produsului a esuat </string>
    <string name="update_succeded">Editarea produsului a fost realizata cu succes!</string>
    <string name="unsaved_changes_dialog_msg">Exista schimbari nesalvate!</string>
    <string name="discard">Renuntati</string>
    <string name="keep_editing">Continuati sa editati</string>
    <string name="failed_to_delete">Nu am reusit sa stergem</string>
    <string name="successfully_deleted">Stergere s-a finalizat cu succes</string>
    <string name="delete_dialog">Sunteti sigur ca doriti sa stergeti acest produs?</string>
    <string name="delete">Stergeti</string>
    <string name="cancel">Renuntati</string>
    <string name="go_to_produs">Mereti la produs</string>
    <string name="delete_all_dialog">Sunteti sigur ca doriti sa stergeti intreaga lista de produse? </string>
    <string name="failed_to_delete_all">Stergerea tuturor produselor a esuat </string>
    <string name="successfully_deleted_all">Toate produsele au fost sterse cu succes!</string>
    <string name="camera_permision_denied">Nu avem permisiune sa folosim camera</string>
    <string name="not_found">Nu exista in lista produse</string>
    <string name="camera_permission_ask">Trebuie sa dati permisiunea de folosire a camerei</string>
    <string name="no_facebook_messenger">Nu a fost gasit Messenger-ul</string>
    <string name="no_whatsapp">Nu a fost gasit WhatsApp</string>
    <string name="no_code">Nu ati introdus codul</string>
    <string name="help_intro">Aplicatia noastra va ajuta sa creati o baza de date cu produsele dumneavoastra. Aplicatia poate genera etichete cu cod de bare pe care apoi le puteti printa. Aplicatia suporta limba romana si limba engleza (partial).</string>
    <string name="help_scanare_title">Scanare</string>
    <string name="help_scanare">Functia de scanare a aplicatiei va permite sa: \n * Scanati coduri de bare obtinand un numar corespunzator \n * Sa verificati daca acest cod de bare corespunde unui produs din baza de date a aplicatiei \n * Sa ajungeti la pagina de editare a produsului scanat.</string>
    <string name="help_scanare_intro">Pentru utilizarea acestei functii trebuie sa acordati permisiunea de utilizare a camerei. \n Functia de scanare a fost implementata utilizand biblioteca SimpleZxing. \n In cazul in care codul de bare nu exista in baza de date aplicatia va afisa un mesaj corespunzator.</string>
    <string name="help_lista_title">Lista Produse</string>
    <string name="help_intro_intro">Butonul de Lista Produse va conduce la o lista a produselor aflate in baza de date a aplicatiei. \n Initial, aplicatia nu are o baza de date, dumneavoastra veti adauga produsele care vor fi afisate aici. Lista va afiseaza numele, codul si o poza a fiecarui produs.</string>
    <string name="help_lista">De pe pagina cu lista produselor puteti sa: \n * Accesati fiecare produs pentru a-l edita, a-l sterge sau pentru a printa eticheta.</string>
    <string name="help_lista_delete">* Butonul de Delete de pe aceasta pagina va permite sa curatati intreaga lista cu produse. Inainte de a sterge, aplicatia va cere o confirmare dorintei de a sterge.</string>
    <string name="help_lista_add">* Butonul de adaugare va trimite la pagina de insertie a unui produs nou de unde veti putea adauga un produs cu nume, cod si poza.</string>
    <string name="help_editare_title">Editare Produs</string>
    <string name="help_editare_intro">Pagina de editare a produsului are functie dubla: aici puteti introduce un produs nou cu nume, cod si poza sau puteti edita un produs deja existent. \n In primul camp de pe aceasta pagina trebuie introdus numele produsului. \n In al doilea camp trebuie introdus un cod al produsului de maxim 9 cifre.</string>
    <string name="help_editare_save">Butonul de Salvare va ingaduie sa salvati produsul introdus in baza de date. Pentru a-l salva sunteti obligati sa introduceti un nume, un cod si sa faceti o poza a prodului. In caz contrar veti primi un mesaj care va spune ca nu sunt suficiente date pentru a fi salvat produsul. </string>
    <string name="help_editare_delete">Butonul de Stergere va permite sa stergeti produsul pe care l-ati accesat.</string>
    <string name="help_editare_generare_cod">Butonul de Generare a codului de bare va afisa o imagine a codului de bare in format EAN13 corespunzator codului produsului.</string>
    <string name="help_editare_print">Butonul de Printare va permite sa printati eticheta generata care contine codul de bare, numele produsului si o semnatura introdusa de aplicatie.</string>
    <string name="help_editare_camera">Butonul Camera va ofera posibilitatea de a face o poza produsului care va fi salvata in baza de date. Depinzand de versiunea de Android pe care o folositi, s-ar putea sa vi se ceara permisiunea utilizarii camerei.</string>
    <string name="help_cont_title">Setari Cont</string>
    <string name="help_cont_intro">Pagina de setari pentur cont utilizator inca nu este implementata.</string>
    <string name="help_contact_title">Contact</string>
    <string name="help_contact_intro">Pagina de Contact va ofera posibilitatea de a lua legatura cu developerii acestei aplicatii.</string>
    <string name="help_contact_at">Acest buton va permite sa scrieti un email folosind orice aplicatie pentru email de pe telefonul dumneavoastra catre developeri.</string>
    <string name="help_contact_sms">Acest buton va ofera posibilitatea sa trimiteti un mesaj developerilor acestei aplicatii.</string>
    <string name="help_contact_phone">Acest buton va permite sa apelati un developer al acestei aplicatii.</string>
    <string name="help_contact_facebook">Acest buton va permite sa scrieti un mesaj prin aplicatia Messenger de la Facebook unuia dintre developeri. Functia este activa doar daca aveti instalata aplicatia Facebook Messenger.</string>
    <string name="help_contact_coin">Acest buton va permite sa donati pentru dezvoltarea aplicatiilor Coffee Software. (INCA NEIMPLEMENTAT)</string>
    <string name="help_contact_whatsApp">Acest buton va permite sa luati legatura cu un developer utilizand aplicatia WhatsApp Messenger. Functia e activa doar daca aveti aplicatia instalata pe telefon, in caz contrar veti primi un mesaj informativ.</string>
    <string name="empty_view">There is nothing here.</string>
</resources>
