<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="comcoffeesoftware.httpsgithub.inventarsoft.EditorActivity">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textColor="@color/secondaryLightColor"
        android:textSize="28sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/touch_feedback"
        android:elevation="8dp"
        android:padding="1dp">

        <EditText
            android:id="@+id/Camp_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/touch_feedback"
            android:gravity="center"
            android:hint="@string/nume_editor"
            android:padding="4dp"
            android:textColor="@color/secondaryColor" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/touch_feedback"
        android:elevation="8dp"
        android:padding="1dp">

        <EditText
            android:id="@+id/Camp_Cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/touch_feedback"
            android:gravity="center"
            android:hint="@string/COD_editor"
            android:inputType="number"
            android:padding="4dp"
            android:textColor="@color/secondaryColor" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/save_button_produs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/touch_feedback"
            android:elevation="2dp"
            android:padding="12dp"
            android:src="@drawable/ic_content_save_outline_white_48dp"
            android:text="@string/Save_editor" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/touch_feedback"
            android:elevation="2dp"
            android:padding="12dp"
            android:src="@drawable/ic_delete_empty_white_48dp"
            android:text="@string/print_bar_code" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_cod"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/cod_image"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/primaryTextColor" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/touch_feedback"
            android:elevation="2dp"
            android:padding="12dp"
            android:src="@drawable/ic_barcode_white_48dp"
            android:text="@string/generate_bar_code" />

        <ImageView
            android:id="@+id/print_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/touch_feedback"
            android:elevation="2dp"
            android:padding="12dp"
            android:src="@drawable/ic_printer_white_48dp"
            android:text="@string/print_bar_code" />

        <ImageView
            android:id="@+id/poza_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/touch_feedback"
            android:elevation="2dp"
            android:padding="12dp"
            android:src="@drawable/ic_camera_enhance_white_48dp"
            android:text="@string/print_bar_code" />
    </LinearLayout>

    <ImageView
        android:id="@+id/poza_produs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="2dp"
        android:padding="12dp"
        android:text="@string/print_bar_code" />


</LinearLayout>